# Kuma3D

./: CMakeLists.txt  README.md  build.sh
cmake/: Kuma3DConfig.cmake.in
examples/: CMakeLists.txt
examples/01-hello-world/: CMakeLists.txt  main.cpp
examples/02-scenes-and-systems/: CMakeLists.txt  Movable.hpp  MovementSystem.cpp  MovementSystem.hpp  SceneFactory.hpp  main.cpp
examples/cubes/: CMakeLists.txt  Physics.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  main.cpp
examples/cubes/resources/shaders/: CubeShader.frag  CubeShader.vert  LightShader.frag  LightShader.vert
examples/kumaTetris/: CMakeLists.txt  main.cpp
examples/kumaTetris/components/: Block.hpp  Movable.hpp
examples/kumaTetris/resources/: attributions.txt
examples/kumaTetris/resources/shaders/: GridShader.frag  GridShader.vert  TileShader.frag
examples/kumaTetris/systems/: BlockSystem.cpp  BlockSystem.hpp  MovementSystem.cpp  MovementSystem.hpp
examples/kumaTetris/util/: BlockUtil.hpp  SceneFactory.hpp
examples/lighting/: CMakeLists.txt  Orbit.hpp  OrbitSystem.cpp  OrbitSystem.hpp  Rotate.hpp  RotateSystem.cpp  RotateSystem.hpp  main.cpp
examples/lighting/resources/shaders/: CubeShader.frag  CubeShader.vert
examples/starBear/: BulletUtil.hpp  CMakeLists.txt  SceneFactory.hpp  main.cpp
examples/starBear/components/: Bullet.hpp  Hitbox.hpp  ShipControl.hpp
examples/starBear/resources/: attributions.txt
examples/starBear/resources/models/asteroid/: asteroid.mtl
examples/starBear/resources/models/ship/: ship.mtl
examples/starBear/resources/shaders/: ShipShader.frag  ShipShader.vert
examples/starBear/systems/: BulletSystem.cpp  BulletSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ShipControlSystem.cpp  ShipControlSystem.hpp
examples/tetris/: Block.hpp  BlockSystem.cpp  BlockSystem.hpp  BlockUtil.hpp  CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.hpp  SceneFactory.hpp  main.cpp
examples/tetris/resources/shaders/: TileShader.frag
examples/untitled/: CMakeLists.txt  SceneFactory.hpp  main.cpp
source/: CMakeLists.txt
source/audio/: AudioLoader.cpp  AudioLoader.hpp  AudioSystem.cpp  AudioSystem.hpp
source/components/: Audio.hpp  Camera.hpp  DirectionalLight.hpp  Light.hpp  Mesh.hpp  Model.hpp  PointLight.hpp  SpotLight.hpp  Sprite.hpp  Transform.hpp
source/core/: ComponentList.hpp  Entity.hpp  Game.cpp  Game.hpp  GameSignals.cpp  GameSignals.hpp  IDGenerator.cpp  IDGenerator.hpp  InputSignals.hpp  Observer.cpp  Observer.hpp  Scene.cpp  Scene.hpp  Signal.hpp  Signature.hpp  System.cpp  System.hpp  Types.hpp  WindowOptions.hpp
source/core/signals/: EntitySignals.cpp  EntitySignals.hpp  GameSignals.cpp  GameSignals.hpp  InputSignals.cpp  InputSignals.hpp
source/math/: Mat4.hpp  MathUtil.hpp  Vec3.hpp
source/renderer/: FontLoader.cpp  FontLoader.hpp  ModelLoader.cpp  ModelLoader.hpp  PointLightSystem.cpp  PointLightSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ShaderLoader.cpp  ShaderLoader.hpp  SpriteSystem.cpp  SpriteSystem.hpp  TextureLoader.cpp  TextureLoader.hpp
tests/: CMakeLists.txt
tests/componentTests/: CMakeLists.txt  ComponentTests.hpp  main.cpp
tests/coreTests/: CMakeLists.txt  CoreTests.hpp  main.cpp
tests/mathTests/: CMakeLists.txt  MathTests.hpp  main.cpp
